--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dagi's Web</title>
+    <title>Dag-Developer | GitHub</title>
 </head>
 <body>
     <h1>Hello world!</h1>
