--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dag-Developer | GitHub</title>
+    <style>
+        body{
+            background-color: rgb(3, 3, 75);
+            font-family: sans-serif;
+        }
+        h1{
+            text-align: center;
+            color: white;
+            font-size: 100px;
+        }
+        p{
+            text-align: center;
+            margin-top: 100px;
+            font-size: 70px;
+            color: lime;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello world!</h1>
     <p>This is my GitHub page.</p>
+    <p>I will Deploy my Portfolio soon!</p>
 </body>
 </html>
